# ee6470

final/: Presentation.pptx  Presentation_proposal.pptx  report.md
final/riscv-vp/vp/src/platform/tiny32-final-1core/: CMakeLists.txt  MergeLV1_p0.h  tiny32_main.cpp
final/riscv-vp/vp/src/platform/tiny32-final-2core-lv2-3pe/: CMakeLists.txt  MergeLV1_p0.h  MergeLV2_p0.h  mc_main.cpp
final/riscv-vp/vp/src/platform/tiny32-final-4core-lv3-7pe/: CMakeLists.txt  MergeLV1_p0.h  MergeLV2_p0.h  MergeLV3_p0.h  defines.h  mc_main.cpp
final/stratus/merge_sort_16data-2thread/: MergeLV1_p0.cc  MergeLV1_p1.h  MergeLV2_p0.cc  MergeLV2_p0.h  Partition.h  defines.h  project.tcl  tb.cc  tb.h
final/stratus/merge_sort_64data-2thread/: MergeLV1_p0.h  MergeLV1_p1.cc  MergeLV2_p0.h  Partition.cc  defines.h  loop_directives.h  system.h
final/stratus/merge_sort_64data-4/: Makefile  MergeLV1_p0.cc  MergeLV1_p0.h  MergeLV1_p1.cc  MergeLV1_p2.cc  MergeLV1_p2.h  MergeLV1_p3.cc  MergeLV1_p3.h  (+10 more)
gaussianblur_tlm_bus/: SobelFilter.cpp
hw01/: README.md
hw01/data_movement/: CMakeLists.txt  GaussianblurFilter.cpp  GaussianblurFilter.h  Testbench.cpp  Testbench.h  filter_def.h  main.cpp
hw01/gaussianblur_fifo/: CMakeLists.txt  GaussianBlurFilter.cpp  GaussianBlurFilter.h  Testbench.cpp  Testbench.h  main.cpp
hw02/gaussianblur_fifo/: CMakeLists.txt  GaussianBlurFilter.cpp  GaussianBlurFilter.h  Testbench.cpp  Testbench.h  filter_def.h  main.cpp
hw02/gaussianblur_tlm_bus/: MemoryMap.h  SobelFilter.h  Testbench.cpp  filter_def.h
hw04/: report.md
hw3/: report.md
hw3/gaussianblur_tlm_bus/: CMakeLists.txt  GaussianBlurFilter.cpp  GaussianBlurFilter.h  MemoryMap.h  README.md  Testbench.cpp  Testbench.h  filter_def.h  main.cpp
hw3/stratus_hw3/: GaussianBlurFilter.cpp  GaussianBlurFilter.h  Makefile  README.md  System.cpp  System.h  Testbench.cpp  Testbench.h  directives.h  filter_def.h
midterm/: report.md
(+46 files in other folders)
